source/assets/stylesheets/_modules/pages/pricing.scss
.document-pricing
{
    
    .heading
    {
        max-width: 800px;
        margin: auto;
    }

    .outer
    {
        text-align: center;
    }

    .inner
    {
        text-align: left;
        margin: auto;

        .currency
        {
            float: right;

            @include media($mobile)
            {
                float: none;
                display: block;
                margin-bottom: 5px;
            }
        }

        .testimonials
        {
            font-weight: 400;
        }

        .block
        {
            $gutter: 0;
            margin: 10px auto 20px;
            padding: 0;
            text-align: center;

            & > li
            {
                width: 320px;
                vertical-align: top;
                display: inline-block;

                border: 2px solid rgba(0,0,0,0.3);
                background: #FFF;
                border-radius: 3px;
                margin: 50px 1.5% 15px;
                padding: 10px 5px;

                position: relative;
                
                &:nth-child(2)
                {
                    margin-top: 15px;
                    
                    p.description,
                    ul
                    {
                        margin: 25px 0;
                    }
                }
                
                em.popular
                {
                    font-style: italic;
                    font-size: 16px;
                    font-weight: bold;
                    text-transform: uppercase;
                }

                /* Title */
                & > h2
                {
                    text-transform: uppercase;
                    font-weight: normal;
                    color: $color-base-important;
                    font-size: 24px;
                    margin: 5px 0;
                }

                /* Price */
                h1
                {
                    font-weight: normal;
                    margin: 5px 0;
                    position: relative;
                    
                    big
                    {
                        display: block;
                        font-size: 30px;
                        
                        sup
                        {
                            font-size: 15px;
                        }
                        
                        &.del
                        {
                            opacity: 0.4;
                            display: inline-block;
                            margin-left: -60px;
                        }
                        
                        &.promo
                        {
                            font-size: 36px;
                            font-weight: bold;
                            display: inline-block;
                            
                            sup
                            {
                                font-size: 22px;
                            }
                        }
                    }

                    span
                    {
                        display: block;
                        font-size: 15px;
                    }
                }
                
                /* Features */
                ul
                {
                    margin: 0;
                    padding: 0;
                    
                    li
                    {
                        margin: 8px 0;
                    }
                }

                /* Description */
                p.description
                {
                    display: block;
                    margin-left: auto;
                    margin-right: auto;
                    font-size: 12px;
                    color: #6B6B6B;
                    line-height: 1.5;
                }

                .buttons
                {
                    text-align: center;
                    width: 100%;
                }
            }

        }

        .block.continued li
        {
            margin: 0 1%;
        }
    }

    .buttons
    {
        margin-top: 25px;

        a
        {
            position: relative;
            display: inline-block;
            width: 210px;
            margin: 0 auto 5px;
            padding: 4px;
            text-align: center;
            
            big
            {
                display: block;
                font-size: 16px;
                
                del
                {
                    font-weight: normal;
                    font-size: 14px;
                }
            }
            
            small
            {
                font-weight: normal;
                font-size: 12px;
            }
        }
    }
    
    .outer-bottom
    {
        max-width: 980px;
        margin: auto;
        
        .buttons
        {
            text-align: center;
            display: inline-block;
            
            .button:not(:last-child)
            {
                margin-right: 15px;
            }
            
            small
            {
                font-weight: bold;
            }
        }
        
        h1, h2
        {
            margin-top: 25px;
        }
    }

    .contract-holder
    {
        font-size: 9pt;

        p
        {
            margin: 0;
        }
    }
    
    .promotion
    {
        color: $promo-color;
    }

}

.document-license-comparison
{
    span.check
    {
        font-weight: bold;
        font-size: 16px;
    }

    td:nth-child(3) span.check
    {
        color: #45A09A;
        font-size: 22px;
    }
}

